@@ -1,3 +1,5 @@
+hdparm-9.6
+	- fix -N for 1.5TB drives (from Justin Maggard)
 hdparm-9.5
 	- byteswap ID strings for fwdownload workarounds
 	- Makefile fixes for $(STRIP) from Wolfram Sang
